--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="h5">
   <div class="textHeader">
-    <p>Store</p>
+    <p>S T O  R E</p>
   </div>
   <div>
     <a mat-button href="https://www.facebook.com/chacara7anoes" target="_blank">
@@ -9,3 +9,11 @@
       </span></a>
   </div>
 </mat-toolbar>
+<div class="nav">
+  <div class="row">
+    <button type="button" mat-flat-button color="accent" routerLink="/home">Home</button>
+    <button type="button" mat-flat-button color="accent" routerLink="/cadastros">Cadastros</button>
+    <button type="button" mat-flat-button color="accent" routerLink="/listas">Listas</button>
+    <button type="button" mat-flat-button color="accent" routerLink="/contato">Ajuda</button>
+  </div>
+</div>
