--- a/src/app/component/navigation/navigation.component.html
+++ b/src/app/component/navigation/navigation.component.html
@@ -1,16 +1,8 @@
 <div class="nav">
-  <div class="wrapper">
-    <button class="box a">
-      Produtos
-    </button>
-    <button class="box b">
-      Clientes
-    </button>
-    <button class="box c">
-      Parceiros
-    </button>
-    <button class="box d">
-      Contato
-    </button>
+  <div class="row">
+    <button>Home</button>
+    <button>Produtos</button>
+    <button>Ajuda</button>
+    <button>Contato</button>
   </div>
 </div>
