--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -5,7 +5,6 @@
 .h5 {
   background-color: rgb(124, 1, 1);
   width: 100%;
-  margin-bottom: 50px;
 }
 .titlechac {
   text-align: center;
@@ -13,5 +12,23 @@
 
 .textHeader {
   color: #fff;
+  font-size: 25px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0 auto;
 }
+
+.nav {
+  background-color: rgb(124, 1, 1);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.row button{
+  margin:0 1em 0 0;
+  color: #000;
+  width: 120px;
+  border:none!important;
+  cursor: pointer;
+}
+
