--- a/src/app/component/navigation/navigation.component.css
+++ b/src/app/component/navigation/navigation.component.css
@@ -1,23 +1,22 @@
 .nav {
-  background-color: rgb(116, 116, 116);
+
+  margin-bottom: 10px;
+  width: 100%;
 }
 
-.wrapper {
-  margin: 0 auto;
+.row {
+  display: flex;
   justify-content: center;
-  text-align: center;
-  display: grid;
-  grid-template-columns: 200px 200px 200px 200px;
-  grid-template-rows: 100px 100px 100px;
-  grid-gap: 10px;
-  background-color: #fff;
-  color: #444;
 }
 
-.box {
-  background-color: #444;
-  color: #fff;
-  border-radius: 8px;
-  padding: 30px;
-  font-size: 250%;
+.row button{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 10px;
+  margin:0 1em 0 0;
+  color: #000;
+  background-color: rgb(116, 116, 116);
+  border-radius: 7px;
+  width: 120px;
+  border:none!important;
 }
+
