--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -12,7 +12,7 @@
 
 .textHeader {
   color: #fff;
-  font-size: 25px;
+  font-size: 26px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0 auto;
 }
@@ -22,6 +22,10 @@
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.row {
+  margin-bottom: 8px;
 }
 
 .row button{
