melhorias com css

--- a/src/app/screen/contato/contato.component.html
+++ b/src/app/screen/contato/contato.component.html
@@ -1,2 +1,23 @@
-<app-header></app-header>
-<p>contato works!</p>
+
+
+<div class="container">
+  <div class="divTitle">
+    <div>
+      <a>Precisa de <strong>ajuda</strong> ?</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="divTwo">
+      <a> DIV 2</a>
+    </div>
+    <div class="divThree">
+      <a>DIV 3</a>
+    </div>
+  </div>
+  <div class="divFour">
+    <a>DIV 4</a>
+  </div>
+  <div class="divFive">
+    <a>DIV 5</a>
+  </div>
+</div>
