--- a/src/app/screen/home/home.component.html
+++ b/src/app/screen/home/home.component.html
@@ -1,1 +1,13 @@
-<app-header></app-header>
+<div class="container-home">
+  <section class="section-header">
+    <app-header></app-header>
+  </section>
+  <section class="section-center">
+
+    <app-nav-bar></app-nav-bar>
+  </section>
+  <section class="section-footer">
+
+  </section>
+
+</div>
