--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -1,38 +1,34 @@
-.example-spacer {
-  flex: 1 1 auto;
-}
-
-.h5 {
-  background-color: rgb(124, 1, 1);
-  width: 100%;
-}
-.titlechac {
-  text-align: center;
-}
-
-.textHeader {
-  color: #fff;
-  font-size: 26px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin: 0 auto;
-}
-
-.nav {
-  background-color: rgb(124, 1, 1);
-  width: 100%;
+.container__header {
   display: flex;
   justify-content: center;
+  width: 30%;
+  background-color: #1e3456;
+  height: 60px;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 4px;
+  align-items: center;
+  padding: 3px;
+
 }
 
-.row {
-  margin-bottom: 8px;
-}
-
-.row button{
-  margin:0 1em 0 0;
-  color: #000;
-  width: 120px;
-  border:none!important;
+h1 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #fff;
+  font-size: 40px;
+  margin: 0 auto;
   cursor: pointer;
 }
 
+h1:hover {
+  color: #850b0b;
+}
+
+h1:hover span{
+  color: #fff;
+}
+
+span {
+  color: #850b0b;
+  font-weight: bold;
+}
