--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,19 +1,3 @@
-<mat-toolbar class="h5">
-  <div class="textHeader">
-    <p>S T O  R E</p>
-  </div>
-  <div>
-    <a mat-button href="https://www.facebook.com/chacara7anoes" target="_blank">
-      <span class="material-icons" style="color: #fff;">
-        facebook
-      </span></a>
-  </div>
-</mat-toolbar>
-<div class="nav">
-  <div class="row">
-    <button type="button" mat-flat-button color="accent" routerLink="/home">Home</button>
-    <button type="button" mat-flat-button color="accent" routerLink="/cadastros">Cadastros</button>
-    <button type="button" mat-flat-button color="accent" routerLink="/listas">Listas</button>
-    <button type="button" mat-flat-button color="accent" routerLink="/contato">Ajuda</button>
-  </div>
+<div class="container__header">
+ <h1>Store <span>Tech</span></h1>
 </div>
